--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "解锁 海角社区(haijiao.com) VIP帖子,并去除网站广告, TG讨论群:@svip_hj",
   "repository": "https://github.com/sex4096/haijiao_vip.git",
   "author": {
-    "name": "sex4096",
+    "name": "forgetme8",
     "telegram": "@svip_hj"
   },
   "scripts": {
