--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.15.8",
+    "@babel/preset-react": "^7.24.1",
     "@babel/preset-typescript": "^7.15.0",
     "@homegrown/rollup-plugin-postcss-modules": "^2.0.2",
     "@rollup/plugin-alias": "^3.1.8",
@@ -23,14 +24,20 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@types/jquery": "^3.5.8",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
     "@types/tampermonkey": "^4.0.5",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "autoprefixer": "^10.3.7",
     "core-js": "3.18.3",
     "eslint": "^8.0.1",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.1",
     "postcss": "^8.3.11",
     "prettier": "^3.2.5",
+    "react-error-overlay": "^6.0.11",
+    "react-hooks": "^1.0.1",
     "rollup": "^2.58.0",
     "rollup-plugin-postcss": "^4.0.1",
     "rollup-plugin-svg-to-symbol": "^1.0.0",
@@ -40,7 +47,9 @@
   "dependencies": {
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
-    "@rollup/plugin-babel": "^5.3.0"
+    "@rollup/plugin-babel": "^5.3.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0"
   },
   "browserslist": "chrome >= 31, edge >= 20, safari >= 6, firefox >= 52, opera >= 15 and > 0.2%",
   "license": "MIT"
