--- a/package.json
+++ b/package.json
@@ -45,9 +45,11 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.6",
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
     "@rollup/plugin-babel": "^5.3.0",
+    "antd": "^5.16.4",
     "react": "^18.3.0",
     "react-dom": "^18.3.0"
   },
