--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "haijiao-vip",
   "version": "0.0.8",
-  "description": "解锁 海角社区(haijiao.com) VIP帖子,并去除网站广告, TG讨论群:@svip_hj",
+  "description": "解锁 海角社区(haijiao.com) VIP帖子,并去除网站广告, TG讨论群:@svip_hj.本插件完全免费,如果你是付费购买,请立刻退款并举报",
   "repository": "https://github.com/sex4096/haijiao_vip.git",
   "author": {
     "name": "forgetme8",
