--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "haijiao-vip",
   "version": "0.0.12",
-  "description": "解锁 海角社区(haijiao.com) VIP帖子,并去除网站广告, TG讨论群:@svip_hj.本插件完全免费,如果你是付费购买,请立刻退款并举报",
+  "description": "解锁 海角社区(haijiao.com) 收费视频,VIP,并去除网站广告, TG频道:@svip_nav.本插件完全免费,请注意甄别,避免上当受骗.",
   "repository": "https://github.com/sex4096/haijiao_vip.git",
   "author": {
     "name": "forgetme8",
-    "telegram": "@svip_hj"
+    "telegram": "@svip_nav"
   },
   "scripts": {
     "dev": "rollup --config --environment BUILD:development --watch",
